welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:11: error: ';' expected but 'while' found.
avance()while (!=estSurBiscuit)
        ^RunFour:15: error: ';' expected but 'while' found.
avance()while (!=estSurBiscuit)
        ^